<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" 
    xmlns:tools="http://schemas.android.com/tools" 
    android:layout_width="match_parent" 
    android:layout_height="match_parent" 
    android:paddingBottom="@dimen/activity_vertical_margin" 
    android:paddingLeft="@dimen/activity_horizontal_margin" 
    android:paddingRight="@dimen/activity_horizontal_margin" 
    android:paddingTop="@dimen/activity_vertical_margin" 
    tools:context="eecs314.project.cae.MainActivity$PlaceholderFragment">
<LinearLayout 
    android:layout_width="match_parent" 
    android:layout_height="wrap_content" 
    android:paddingLeft="@dimen/activity_horizontal_margin" 
    android:paddingRight="@dimen/activity_horizontal_margin" 
    android:orientation="vertical" 
    tools:context="eecs314.project.cae.MainActivity$PlaceholderFragment">
    
    <TextView 
        android:id="@+id/comparison_description" 
        android:layout_width="match_parent" 
        android:layout_height="wrap_content" 
        android:textSize="16sp" 
        android:text="@string/comparison_description" />
    
    <TextView 
        android:id="@+id/comparison_equation" 
        android:layout_width="wrap_content" 
        android:layout_height="wrap_content"
        android:layout_margin="25dp"
        android:text="@string/comparison_equation" />
    
    <LinearLayout 
        android:layout_width="match_parent" 
        android:layout_height="wrap_content" 
        android:layout_marginLeft="25dp"
        android:paddingLeft="@dimen/activity_horizontal_margin" 
        android:paddingRight="@dimen/activity_horizontal_margin" 
        android:orientation="horizontal">
        
        <TextView
            android:id="@+id/cpu_time_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cpu_time_1" />
        
        <EditText 
            android:id="@+id/edit_cpu_time_1" 
            android:layout_width="80dp" 
            android:layout_height="wrap_content"
            android:inputType="numberDecimal" />
    </LinearLayout>
    
    <LinearLayout 
        android:layout_width="match_parent" 
        android:layout_height="wrap_content" 
        android:layout_marginLeft="25dp"
        android:paddingLeft="@dimen/activity_horizontal_margin" 
        android:paddingRight="@dimen/activity_horizontal_margin" 
        android:orientation="horizontal">
        
        <TextView
            android:id="@+id/cpu_time_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cpu_time_2" />
        
        <EditText 
            android:id="@+id/edit_cpu_time_2" 
            android:layout_width="80dp" 
            android:layout_height="wrap_content"
            android:inputType="numberDecimal" />
    </LinearLayout>
    
    <Button 
        android:id="@+id/comparison_compute" 
        android:layout_width="wrap_content" 
        android:layout_height="wrap_content" 
        android:layout_margin="25dp"
        android:text="@string/comparison_compute" />
    
    <TextView 
        android:id="@+id/comparison_result" 
        android:layout_width="wrap_content" 
        android:layout_height="wrap_content"
        android:layout_margin="25dp"
        android:text="@string/comparison_result"
        android:textSize="16sp" />
    
    
</LinearLayout>
</ScrollView>